<resources>
    <string name="app_name">问答机器人</string>
    <string name="robot_name">请输入机器人昵称</string>
    <string name="register_user">请输入用户名</string>
    <string name="register_password">请输入密码</string>
    <string name="register_password2">请确认密码</string>
    <string name="register_boy">男生</string>
    <string name="register_girl">女生</string>
    <string name="register_validate">验证信息</string>
    <string name="register_re">注册并登陆</string>
    <string name="register_icon">机器人Logo</string>
    <string name="news">新闻icon</string>
    <string name="news_1">新闻1</string>
    <string name="hello_news">Hello News</string>
    <string name="robot">机器人</string>
    <string name="_2017_3_14_21_44">timedemo</string>
    <string name="timedemo">2017-01-01 00:00:00</string>
    <string name="me">我</string>
    <string name="my_icon">我的头像</string>
    <string name="input_password">请输入密码</string>
    <string name="input_username">请输入用户名</string>
    <string name="login_str">登录</string>
    <string name="str_register">注册</string>
    <string name="appname">问答机器人</string>
    <string name="send">发送</string>
    <string name="empty_list">空的ListView</string>
    <string name="img_setting_base">控件</string>
    <string name="img_setting_logout">登出</string>
    <string name="img_setting_chat">聊天记录</string>
    <string name="img_setting_setting">设置</string>
    <string name="img_setting_user">用户</string>
    <string name="img_setting_xunlian">训练</string>
    <string name="et_input_msgg">请输入</string>
    <string name="img_setting_cancle">取消</string>
    <string name="user_ion">用户头像设置</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="stu">训练</string>
    <string name="et_question">请输入问题</string>
    <string name="et_answer">请输入答案</string>
</resources>
