<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/register_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:contentDescription="@string/register_icon"
            android:src="@drawable/roboticon"
            />

        <EditText
            android:id="@+id/register_robot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/register_icon"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginTop="19dp"
            android:layout_toEndOf="@+id/register_icon"
            android:hint="@string/robot_name"
            />

        <EditText
            android:id="@+id/register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_icon"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:hint="@string/register_user"
            />


        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_user"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/register_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:hint="@string/register_password2"
            android:inputType="textPassword"
            />

        <RadioGroup
            android:id="@+id/register_sex"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_below="@id/register_password2"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/register_boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/register_boy"
                />

            <RadioButton
                android:id="@+id/register_girl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register_girl"
                />
        </RadioGroup>

        <Button
            android:id="@+id/register_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_sex"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:text="@string/register_validate"
            />

        <Button
            android:id="@+id/register_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_validate"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:enabled="false"
            android:text="@string/register_re"
            />
    </RelativeLayout>
</layout>
