<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alfredjin.iamrobot.app.MainActivity">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:background="#58B7FF"
        >

        <TextView
            android:id="@+id/main_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/appname"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="#58B7FF"
        >

        <Button
            android:id="@+id/btn_send_msg"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/send_btn_bg"
            android:text="@string/send"
            />

        <Button
            android:id="@+id/btn_add_more"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@drawable/add_btn_bg"
            />

        <EditText
            android:id="@+id/et_input_msg"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/btn_send_msg"
            android:layout_toRightOf="@id/btn_add_more"
            android:background="@drawable/login_edit_normal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/et_input_msgg"
            android:textColor="#000"
            android:textSize="18sp"
            />
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_msgs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rl_bottom"
        android:layout_below="@id/rl_top"
        android:divider="@null"
        android:dividerHeight="5dp"
        android:transcriptMode="alwaysScroll"
        >
    </ListView>

    <ImageView
        android:id="@+id/lv_empty_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp"
        android:src="@drawable/empty_list"/>

    <RelativeLayout
        android:id="@+id/rl_setting"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="5dp"
        android:paddingRight="5dp"
        >

        <ImageView
            android:id="@+id/img_setting_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="8dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/img_setting_logout"
            android:src="@drawable/logout_normal"
            />

        <ImageView
            android:id="@+id/img_setting_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="8dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/img_setting_chat"
            android:src="@drawable/chat_normal"
            />

        <ImageView
            android:id="@+id/img_setting_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="8dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/img_setting_setting"
            android:src="@drawable/setting_normal"
            />

        <ImageView
            android:id="@+id/img_setting_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="8dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/img_setting_user"
            android:src="@drawable/user_normal"
            />

        <ImageView
            android:id="@+id/img_setting_xunlian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="8dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/img_setting_xunlian"
            android:src="@drawable/xunlian_normal"
            />

        <ImageView
            android:id="@+id/img_setting_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="8dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/img_setting_cancle"
            android:src="@drawable/cancel_normal"
            />

        <ImageView
            android:id="@+id/img_setting_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/img_setting_base"
            android:src="@drawable/a"
            />
    </RelativeLayout>
</RelativeLayout>
