<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/add_study_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/et_question"
            android:textColor="#000"
            android:textColorHint="#000"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />

        <EditText
            android:id="@+id/add_study_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/et_answer"
            android:textColor="#000"
            android:textColorHint="#000"
            />

        <Button
            android:id="@+id/add_study_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/save"
            />

    </LinearLayout>
</layout>