<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_from_msg_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/timedemo"
            android:textSize="12sp"
            />

        <LinearLayout
            android:id="@+id/item_cook_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/cook_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="菜名:"
                />

            <TextView
                android:id="@+id/cook_info"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="材料:"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="点击查看详情>>"
                />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/item_news_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageView
                android:id="@+id/item_news_icon"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/news"
                android:src="@drawable/baby"/>

            <TextView
                android:id="@+id/item_news_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/item_news_icon"
                android:text="@string/hello_news"
                />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/item_text_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/robot_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/roboticon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/robot"
                    android:textSize="18sp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_from_msg_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/chatfrom_bg_normal"
                android:text="@string/app_name"
                android:textColor="#000"
                />
        </LinearLayout>

    </LinearLayout>

</layout>